tests/ui/impl-trait/in-trait/false-positive-predicate-entailment-error.next.stderr
error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:41:5
   |
LL | /     fn autobatch<F>(self) -> impl Trait
...  |
LL | |     where
LL | |         F: Callback<Self::CallbackArg>,
   | |_______________________________________^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:19:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
help: consider further restricting type parameter `F` with trait `MyFn`
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:41:5
   |
LL | /     fn autobatch<F>(self) -> impl Trait
...  |
LL | |     where
LL | |         F: Callback<Self::CallbackArg>,
   | |_______________________________________^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:19:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider further restricting type parameter `F` with trait `MyFn`
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:41:5
   |
LL | /     fn autobatch<F>(self) -> impl Trait
...  |
LL | |     where
LL | |         F: Callback<Self::CallbackArg>,
   | |_______________________________________^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:19:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider further restricting type parameter `F` with trait `MyFn`
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:19:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:41:30
   |
LL |     fn autobatch<F>(self) -> impl Trait
   |                              ^^^^^^^^^^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:19:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:41:30
   |
LL |     fn autobatch<F>(self) -> impl Trait
   |                              ^^^^^^^^^^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:19:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
